syntax = "proto3";

package o5.aws.deployer.v1;

import "o5/application/v1/application.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_pb";

message Parameter {
  string name = 1;
  string type = 2;
  string description = 3;
  ParameterSourceType source = 4;

  repeated string args = 6;
}

message ParameterSourceType {
  oneof type {
    Static static = 1;
    WellKnown well_known = 2;
    RulePriority rule_priority = 3;
    DesiredCount desired_count = 4;
    CrossEnvAttr cross_env_attr = 5;
    EnvVar env_var = 6;
    NamedIAMPolicy named_iam_policy = 7;
    AuroraEndpoint aurora_endpoint = 8;
  }

  message Static {
    string value = 1;
  }

  message WellKnown {
    string name = 1;
  }

  message RulePriority {
    o5.application.v1.RouteGroup route_group = 1;
  }

  message DesiredCount {}

  message CrossEnvAttr {
    string env_name = 1;
    EnvAttr attr = 2;
  }

  message EnvVar {
    string name = 1;
  }

  message NamedIAMPolicy {
    string name = 1;
  }

  message AuroraEndpoint {
    string server_group = 1;
    string db_name = 2;
  }
}

enum EnvAttr {
  ENV_ATTR_UNSPECIFIED = 0;
  ENV_ATTR_FULL_NAME = 1;
  ENV_ATTR_SNS_PREFIX = 2;
}
