syntax = "proto3";

package o5.aws.infra.v1;

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/infra/v1/awsinfra_pb";

message ECSTaskContext {
  string cluster = 1;
  ECSTaskNetworkType network = 2;
}

message ECSTaskNetworkType {
  oneof type {
    AWSVPC awsvpc = 1;
  }

  message AWSVPC {
    repeated string security_groups = 1;
    repeated string subnets = 2;
  }
}
